--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,8 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.html [NC,L]
+
+Redirect 301 /komanda_ua/ https://www.kyrii-group.com.ua/about-us
+Redirect 301 /проекти/ https://www.kyrii-group.com.ua/all-projects
+Redirect 301 /ru/proekti/ https://www.kyrii-group.com.ua/all-projects
+Redirect 301 /en/team/ https://www.kyrii-group.com.ua/about-us
